update demo link

--- a/demo.html
+++ b/demo.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML5 Test Page</title>
-    <link rel="stylesheet" href="https://unpkg.com/resetti/resetti.min.css" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://unpkg.com/resetti/resetti.min.css" />
   </head>
   <body>
-    <div id="top" class="page" role="document">
+    <div id="top" class="page" ="document">
       <header role="banner">
         <h1>HTML5 Test Page</h1>
         <p>This is a test page filled with common HTML elements to be used to provide visual feedback whilst building CSS systems and frameworks.</p>
