set default font sizes for headings

--- a/demo.html
+++ b/demo.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML5 Test Page</title>
-    <link rel="stylesheet" href="https://unpkg.com/resetti/resetti.min.css" />
+    <link rel="stylesheet" href="./resetti.min.css" />
   </head>
   <body>
     <div id="top" class="page" ="document">
